--- a/08-HTML/homework/styles.css
+++ b/08-HTML/homework/styles.css
@@ -3,6 +3,10 @@ body{
     margin: 0 auto;
     padding: 0;
     min-height: 100vh;
+    display: flex;
+    align-items: center;
+    align-content: center;
+    flex-direction: column;
 }
 h1{
     color:blue;
@@ -45,6 +49,4 @@ img{
     margin: 50px;
     
 }
-.divClass{
-    
-}
+
